tests/fixtures/qml/reject/unknown_import.qml
import QtQuick.Controls 2.15

Item {
    width: 100
    height: 100
}
